Add post: Git guide: Zero to Rebase
Also, add link to HN discussion in previous post

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
 <meta property="og:url" content="https://oyvn.github.io/about/" />
 <meta property="og:site_name" content="oyvn" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"About","url":"https://oyvn.github.io/about/","name":"oyvn","@context":"https://schema.org"}</script>
+{"@type":"WebSite","url":"https://oyvn.github.io/about/","name":"oyvn","headline":"About","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 </head>
 
@@ -55,6 +55,8 @@
 <p>I’m also musically inclined.</p>
 
 <p>This is a blog of sorts.</p>
+
+<p>Contact: oyvn at protonmail.com</p>
 
 <hr />
 
